# simple

./: .env.example  .gitignore  README.md  garak-config.yaml  main.py  pyproject.toml
.github/workflows/: deepeval.yml  deepteam.yml  garak.yml  pyrit.yml  redteam.yml  security.yml
redteam_results/: redteam_20260401_140652.json
scripts/: run_deepteam.py  run_garak.py  run_pyrit.py  run_redteam.py
src/: a2a_handler.py  agent.py  main.py
tests/: conftest.py  test_chat_accuracy.py  test_greeting_quality.py
